edit mkdocs to add feints

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,7 +14,8 @@ nav:
       - A for Aletta: projects/aforaletta.md
     - VR:
       - Therapet: projects/therapet.md
-  - Devlog: devlog.md
+  - Devlog:
+    - creatingfeints.md
   - Contact: contact.md
 
 theme:
