fix gramma and layout issues

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,8 +14,8 @@ nav:
       - A for Aletta: projects/aforaletta.md
     - VR:
       - Therapet: projects/therapet.md
-  - Devlog:
-    - creatingfeints.md
+  - Devlogs:
+    - devlogs/creatingfeints.md
   - Contact: contact.md
 
 theme:
