change site url, attempt to re-deploy

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 site_name: Haocheng Yang - Game Developer
-site_url: https://howchen217.github.io/haochengyang-portfolio/
+site_url: https://haochengyang.games/
 nav:
   - Home: index.md
   - Projects:
