change url in ci again

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     environment:
       name: github-pages
-      url: ${{haochengyang.games}}
+      url: https://haochengyang.games/
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
