add ruth testimonial into website

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -47,6 +47,9 @@ theme:
       primary: indigo
       accent: lime
 
+extra_css:
+  - css/style.css
+
 markdown_extensions:
   - pymdownx.highlight:
       anchor_linenums: true
