--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,6 +15,8 @@ nav:
     - XR:
       - Therapet: projects/therapet.md
   - Devlogs:
+    - devlogs/immersivesimsautonomy.md
+    - devlogs/crusaderkingsmodders.md
     - devlogs/creatingfeints.md
   - Contact: contact.md
 
